--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,9 @@ android {
     }
 }
 def nav_version = "2.5.2"
-
+def retrofitVersion = '2.3.0'
+def rxJavaVersion = '2.1.1'
+def room_version = "2.4.3"
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -53,6 +55,29 @@ dependencies {
     implementation 'com.android.databinding:viewbinding:7.3.0'
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
+    //Rxjava
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    // glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+
+    //romm
+    implementation("androidx.room:room-runtime:$room_version")
+    implementation "androidx.room:room-compiler:$room_version"
+    implementation("androidx.room:room-ktx:$room_version")
+
+    // corountines
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
 
 
 }
