--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,15 @@ android {
         dataBinding = true
     }
 }
+
+configurations {
+    cleanedAnnotations
+    compile.exclude group: 'org.jetbrains' , module:'annotations'
+}
+
+
 def nav_version = "2.5.2"
-def retrofitVersion = '2.3.0'
+def retrofitVersion = '2.9.0'
 def rxJavaVersion = '2.1.1'
 def room_version = "2.4.3"
 dependencies {
@@ -69,15 +76,18 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
+ 
 
     //romm
     implementation("androidx.room:room-runtime:$room_version")
-    implementation "androidx.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation("androidx.room:room-ktx:$room_version")
 
     // corountines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+
+
+    implementation 'androidx.preference:preference-ktx:1.2.0'
 
 
 }
